crates/perl-semantic-analyzer/tests/snapshots/snapshot_strict_subs_qualified__strict_subs_edge_case_empty_identifier_after_colons.snap
---
source: crates/perl-semantic-analyzer/tests/snapshot_strict_subs_qualified.rs
expression: output
---
3:Foo::: UnquotedBareword 'Foo::' range=((20, 25)) - Bareword 'Foo::' not allowed under 'use strict'
