crates/perl-semantic-analyzer/tests/snapshots/snapshot_strict_subs_qualified__strict_subs_edge_case_leading_double_colon.snap
---
source: crates/perl-semantic-analyzer/tests/snapshot_strict_subs_qualified.rs
expression: output
---
3:::: UnquotedBareword '::' range=((20, 22)) - Bareword '::' not allowed under 'use strict'
