crates/perl-semantic-analyzer/tests/snapshots/snapshot_strict_subs_qualified__strict_subs_qualified_hash_key_excluded.snap
---
source: crates/perl-semantic-analyzer/tests/snapshot_strict_subs_qualified.rs
expression: output
---
3:%h: UnusedVariable '%h' range=((23, 25)) - Variable '%h' is declared but never used
