crates/perl-semantic-analyzer/tests/snapshots/snapshot_strict_subs_qualified__strict_subs_uppercase_package_builtin_identifier.snap
---
source: crates/perl-semantic-analyzer/tests/snapshot_strict_subs_qualified.rs
expression: output
---
3:DBI::connect: UnquotedBareword 'DBI::connect' range=((20, 32)) - Bareword 'DBI::connect' not allowed under 'use strict'
